ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
          name: nginx
          port: 
            number: 80
      - path: /httpd
        pathType: Prefix
        backend:
          service:
          name: httpd
          Port:
            number: 80
spec:
  ingressClassName: kong
  rules:
  - host: example.com
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
